# practice

./: LESSON_CREATION_NOTICE.md  README.md  ULTIMATE_GENERATOR_ALL_200_LESSONS.py  batch_create_lessons.sh  create_all_lessons.py  create_lessons_08_20.sh  create_lessons_69_80.sh  create_remaining_lessons.sh  generate_all_200_lessons.py  generate_lesson_code.sh  generate_opt_lessons_26_40.sh
CPP-ImGui-3D-Rendering-Complete-Course/: CMakeLists.txt  CODE_GENERATION_SUMMARY.md  COMPLETE_LESSON_INDEX.md  COMPLETE_LESSON_INDEX.txt  COURSE_STRUCTURE.md  FINAL_STATISTICS.txt  GETTING_STARTED.md  IMPLEMENTATION_STATUS.md  LESSONS_COMPLETION_SUMMARY.md  QUICK_START_GUIDE.md  README.md
CPP-ImGui-3D-Rendering-Complete-Course/Module-01-CPP-Fundamentals/: LESSONS_20-50_COMPLETION_SUMMARY.md  LESSONS_27_50_CREATED.md
CPP-ImGui-3D-Rendering-Complete-Course/Module-01-CPP-Fundamentals/Lesson-01-Introduction-Setup/: CMakeLists.txt  README.md  example01_hello_world.cpp  example02_basic_output.cpp  example03_program_structure.cpp  example04_namespace.cpp  example05_compilation_demo.cpp  exercise01.cpp  exercise02.cpp  exercise03.cpp  main.cpp  solution01.cpp  solution02.cpp  solution03.cpp  test_setup.cpp
CPP-ImGui-3D-Rendering-Complete-Course/Module-01-CPP-Fundamentals/Lesson-02-First-Program/: CMakeLists.txt  README.md  example01_hello_world.cpp  example02_main_function.cpp  example03_comments.cpp  example04_basic_io.cpp  example05_namespaces.cpp  example06_simple_calculator.cpp  example07_temperature_converter.cpp  exercise01.cpp  exercise02.cpp  exercise03.cpp  exercise04.cpp  exercise05.cpp  main.cpp  solution01.cpp  solution02.cpp  solution03.cpp  solution04.cpp  solution05.cpp
CPP-ImGui-3D-Rendering-Complete-Course/Module-01-CPP-Fundamentals/Lesson-03-Variables-DataTypes/: CMakeLists.txt  README.md  example01_integer_types.cpp  example02_floating_point.cpp  example03_char_bool.cpp  exercise01.cpp  main.cpp  solution01.cpp
CPP-ImGui-3D-Rendering-Complete-Course/Module-01-CPP-Fundamentals/Lesson-04-Operators/: CMakeLists.txt  README.md  example01_arithmetic.cpp  exercise01.cpp  main.cpp  solution01.cpp
CPP-ImGui-3D-Rendering-Complete-Course/Module-01-CPP-Fundamentals/Lesson-05/: CMakeLists.txt  README.md  example01_if_statement.cpp  example02_if_else.cpp  example03_else_if.cpp  example04_switch.cpp  example05_ternary.cpp  exercise01.cpp  exercise02.cpp  exercise03.cpp  main.cpp  solution01.cpp  solution02.cpp  solution03.cpp
CPP-ImGui-3D-Rendering-Complete-Course/Module-01-CPP-Fundamentals/Lesson-06/: CMakeLists.txt  README.md  example01_while_and_for_loops.cpp  example02_while_and_for_loops.cpp  example03_while_and_for_loops.cpp  example04_while_and_for_loops.cpp  example05_while_and_for_loops.cpp  exercise01.cpp  exercise02.cpp  exercise03.cpp  main.cpp  solution01.cpp  solution02.cpp  solution03.cpp
CPP-ImGui-3D-Rendering-Complete-Course/Module-01-CPP-Fundamentals/Lesson-07/: README.md
CPP-ImGui-3D-Rendering-Complete-Course/Module-01-CPP-Fundamentals/Lesson-07-Placeholder/: CMakeLists.txt  example01_do-while_and_nested_loops.cpp  example02_do-while_and_nested_loops.cpp  example03_do-while_and_nested_loops.cpp  example04_do-while_and_nested_loops.cpp  example05_do-while_and_nested_loops.cpp  exercise01.cpp  exercise02.cpp  exercise03.cpp  main.cpp  solution01.cpp  solution02.cpp  solution03.cpp
CPP-ImGui-3D-Rendering-Complete-Course/Module-01-CPP-Fundamentals/Lesson-08/: CMakeLists.txt  README.md  example01_function_basics.cpp  example02_function_basics.cpp  example03_function_basics.cpp  example04_function_basics.cpp  example05_function_basics.cpp  exercise01.cpp  exercise02.cpp  exercise03.cpp  main.cpp  solution01.cpp  solution02.cpp  solution03.cpp
CPP-ImGui-3D-Rendering-Complete-Course/Module-01-CPP-Fundamentals/Lesson-09/: CMakeLists.txt  README.md  example01_arrays.cpp  example02_arrays.cpp  example03_arrays.cpp  example04_arrays.cpp  example05_arrays.cpp  exercise01.cpp  exercise02.cpp  exercise03.cpp  main.cpp  solution01.cpp  solution02.cpp  solution03.cpp
CPP-ImGui-3D-Rendering-Complete-Course/Module-01-CPP-Fundamentals/Lesson-10/: CMakeLists.txt  README.md  example01_strings.cpp  example02_strings.cpp  example03_strings.cpp  example04_strings.cpp  example05_strings.cpp  exercise01.cpp  exercise02.cpp  exercise03.cpp  main.cpp  solution01.cpp  solution02.cpp  solution03.cpp
CPP-ImGui-3D-Rendering-Complete-Course/Module-01-CPP-Fundamentals/Lesson-11/: CMakeLists.txt  README.md  example01_pointers_basics.cpp  example02_pointers_basics.cpp  example03_pointers_basics.cpp  example04_pointers_basics.cpp  example05_pointers_basics.cpp  exercise01.cpp  exercise02.cpp  exercise03.cpp  main.cpp  solution01.cpp  solution02.cpp  solution03.cpp
CPP-ImGui-3D-Rendering-Complete-Course/Module-01-CPP-Fundamentals/Lesson-12/: CMakeLists.txt  README.md  example01_references.cpp  example02_references.cpp  example03_references.cpp  example04_references.cpp  example05_references.cpp  exercise01.cpp  exercise02.cpp  exercise03.cpp  main.cpp  solution01.cpp  solution02.cpp  solution03.cpp
CPP-ImGui-3D-Rendering-Complete-Course/Module-01-CPP-Fundamentals/Lesson-13-Placeholder/: CMakeLists.txt  example01_dynamic_memory.cpp  example02_dynamic_memory.cpp  example03_dynamic_memory.cpp  example04_dynamic_memory.cpp  example05_dynamic_memory.cpp  exercise01.cpp  exercise02.cpp  exercise03.cpp  main.cpp  solution01.cpp  solution02.cpp  (+1 more)
CPP-ImGui-3D-Rendering-Complete-Course/Module-04-OpenGL-3D-Rendering/: MODULE_OVERVIEW.md
CPP-ImGui-3D-Rendering-Complete-Course/Module-05-ImGui-UI/: MODULE_OVERVIEW.md
CPP-Tutorial-400Hours/Code-Examples/: 3D-Basics.slnf  BUILD_INFRASTRUCTURE_SUMMARY.md  BUILD_INSTRUCTIONS.md  BUILD_SYSTEM_OVERVIEW.txt  Beginners.slnf  CMakeLists.txt  CPP-Tutorial-All.sln  CPP-Tutorial-Complete.sln  MFC-Basics.slnf  Optimization.slnf  QUICK_BUILD_GUIDE.txt  README.md  SOLUTION-GUIDE.md  SOLUTION-README.md  build_all_linux.sh  build_all_windows.bat  generate_solution.py  run_examples.py  setup_environment.bat  setup_environment.sh  verify_all.bat  verify_all.sh
(+7108 files in other folders)
